--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 </style>
 <title> Vincent RETORE</title>
-<link rel="stylesheet" type="text/css" href="/home/soinsoin/Bureau/worspace/projet 1 cv html/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <meta charset="utf-8"/>
 </head>
 <body>
